# research-synthesizer

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  NOTES.md  PLAN.md  PROGRESS.md  README.md  WALKTHROUGH.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/coding-principles/: SKILL.md
data/: metadata.json  test_questions.json
notebooks/: demo.ipynb
src/: __init__.py  agent.py  config.py  decomposition.py  evaluate.py  ingest.py  query_engine.py  retriever.py
tests/: __init__.py
